# telegram-relay

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.yaml
.github/workflows/: ci.yml
deploy/: STATUS.md  relay-alert.sh  status.sh  telegram-relay-alert@.service  telegram-relay.service
docs/superpowers/plans/: 2026-07-20-telegram-relay.md  api-notes.md
docs/superpowers/specs/: 2026-07-20-telegram-relay-design.md
src/: cli.rs  config.rs  dedup.rs  deliver.rs  lib.rs  main.rs  media.rs  refresh.rs  render.rs  router.rs  store.rs  telegram.rs
tests/: deliver_test.rs
