[package]
name = "telegram-relay"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Fast Telegram → Discord webhook relay (MTProto userbot)"

[dependencies]
grammers-client = "=0.10.0"
grammers-session = "=0.10.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "fs", "test-util"] }
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lru = "0.12"
dotenvy = "0.15"
anyhow = "1"
thiserror = "2"
rpassword = "7"
arc-swap = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
rand = "0.8"

[dev-dependencies]
axum = "0.8"
