[package]
name = "telegram-relay"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Fast Telegram → Discord webhook relay (MTProto userbot)"

[dependencies]
grammers-client = "=0.10.0"
grammers-session = "=0.10.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "fs", "test-util"] }
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lru = "0.12"
dotenvy = "0.15"
anyhow = "1"
thiserror = "2"
rpassword = "7"
arc-swap = "1"
# System SQLite, NOT bundled: grammers-session statically embeds libsql's own
# sqlite3.c, and a second bundled copy collides at link time on Linux
# (duplicate symbols under lld). Dynamic system linkage also gives rusqlite
# state fully separate from libsql's.
rusqlite = "0.32"
rand = "0.8"
# Already in the tree via grammers (Message::date() -> chrono::DateTime<Utc>);
# named directly here because we format that value into the embed `timestamp`.
# default-features = false keeps it to the types + RFC3339 formatting we use —
# we never call Utc::now(), so the `clock` feature is not ours to request.
chrono = { version = "0.4", default-features = false, features = ["std"] }
# Discord's webhook-avatar PATCH takes a base64 data: URI.
base64 = "0.22"

[dev-dependencies]
axum = "0.8"
